--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,8 +6,10 @@ textColor = "#262730"
 font = "sans serif"
 
 [server]
+headless = true
+port = 8501
 enableCORS = false
-enableXsrfProtection = true
+enableXsrfProtection = false
 
 [browser]
 gatherUsageStats = false 
