--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,19 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Entorno virtual
-venv/
-ENV/
-
-# Archivos de ambiente
+# Archivos de entorno
 .env
 .env.local
-
-# Streamlit
 .streamlit/secrets.toml
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+# Cache y archivos temporales
+__pycache__/
+*.pyc
+.pytest_cache/
+.coverage
+temp_images/
 
-# Sistema operativo
+# Logs
+*.log
+
+# Archivos del sistema
 .DS_Store
 Thumbs.db
 
