--- a/requirements.txt
+++ b/requirements.txt
@@ -64,3 +64,20 @@ urllib3==2.2.3
 validators==0.34.0
 watchdog==6.0.0
 zipp==3.21.0
+fastapi>=0.68.0,<0.69.0
+selenium==4.1.0
+pytest==7.1.1
+webdriver_manager==3.5.2
+locust==2.8.3
+pytest-xdist==2.5.0
+starlette>=0.14.2,<0.15.0
+requests>=2.25.1
+streamlit>=1.24.0
+roboflow>=1.1.0
+pillow>=9.0.0
+python-dotenv>=0.19.0
+requests>=2.28.0
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.5
+fastapi>=0.68.0
+uvicorn>=0.15.0
