--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ tqdm==4.67.0
 typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
-urllib3==2.2.3
+urllib3>=1.26.6,<3
 validators==0.34.0
 watchdog==6.0.0
 zipp==3.21.0
